# VibeLock

./: Dockerfile  LOOP-STATE.md  SKILL.md  docker-compose.yml  pyproject.toml
config/: schema.sql  semgrep_rules.yml
docs/: ARCHITECTURE_SPEC.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: DashboardOverview.tsx  ErrorDisplay.tsx  LoadingSpinner.tsx  Sidebar.tsx  StatCard.tsx  VulnerabilityTable.tsx
migrations/: 001_vibe030_api_keys.sql  002_vibe030_rls.sql  003_github_app_configs.sql
src/api/: __init__.py  api_keys.py  auth.py  auth_routes.py  dashboard.py  github_setup_routes.py
src/cli/: main.py
src/db/: __init__.py  supabase_github.py
src/ingestion/: __init__.py  github_app.py  schemas.py  webhook_gateway.py
src/mcp/: __init__.py  server.py
src/notifications/: __init__.py  dispatcher.py  models.py  slack.py  teams.py
src/remediation/: __init__.py  engine.py  github_pr.py  worker.py
src/scanner/: __init__.py  feedback.py  heuristic.py  semantic.py  semgrep_runner.py  worker.py
src/shared/: __init__.py  budget.py  loop_state.py  metrics.py  notifications.py  redis_streams.py  sanitizer.py  supabase_client.py
src/verifier/: __init__.py  patch_verifier.py
tests/integration/: test_e2e_pipeline.py  test_multi_tenant_isolation.py  test_semgrep_rules.py
tests/unit/: test_budget.py  test_github_app.py  test_heuristic_scanner.py  test_loop_state.py  test_sanitizer.py  test_verifier.py
tooling/: design-VIBE-028-github-app-manifest.md  task_queue.json
(+12 files in other folders)
