[project]
name = "vibelock"
version = "0.2.0"
description = "Autonomous security remediation system — webhook ingestion, dual scanner, agentic fix loop, auto PR"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "supabase>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.0.0",
    "pyjwt>=2.8.0",
    "semgrep>=1.60.0",
    "deepseek-sdk>=0.1.0",
    "gitpython>=3.1.40",
    "docker>=7.0.0",
    "psutil>=5.9.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
vibelock-mcp = "vibelock.src.mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vibelock*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]